--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
-PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+SESSION_ID="INCONNU~XD~ThQTjByS#FYMVdtjhwfPP2TpTDg5SPJAkJEE_3mcLf5iP4b8yGko"
+PREFIX=🌹
+OWNER_NUMBER=224611595559 
+SUDO_NUMBER=224611595559 
+OWNER_NAME=☬𓆩᭄༄𝓒𝓸𝓭𝓮 𝓢𝓲𝔁༄᭄𓆪☬
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
 AUTO_READ=false
-AUTO_RECORDING=false
+AUTO_RECORDING=true 
 AUTO_REACT=false
 STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
 ANTILINK=false
@@ -16,5 +16,5 @@ ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
+MODE=private
 WELCOME=false
